--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 <div id="map"></div>
 <script>
-    var map = L.map('map').setView([37.819, -122.321,], 10);
+    var map = L.map('map').setView([37.819, -122.321], 10);
 
     mapbox_token = 'pk.eyJ1IjoiZnJpZWRyaWgiLCJhIjoiY2o4eGYyZzllMGtiYjMzcGp0cTM5NXZ0cCJ9.BPCA9enT7iq6naVIOEHK9w';
 
