--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </style>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v1.2.0/leaflet.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"/>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.css" rel='stylesheet'/>
     <!-- Javascript Libraries -->
-    <script src="https://cdn.leafletjs.com/leaflet/v1.2.0/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <!-- mapbox gl js -->
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.40.1/mapbox-gl.js"></script>
     <!-- leaflet mapbox js -->
